border spacing fix

--- a/style.sass
+++ b/style.sass
@@ -3,7 +3,12 @@
 
 $darkTeal: #00bba8
 
-/* Cancel Jay's CSS */
+/* Code for http://growthlab.studioissa.com positioning */
+
+.site-header
+  +max-screen(960px)
+    position: relative !important
+
 .home-section-1
   background: $darkTeal
   padding: 0
@@ -11,7 +16,7 @@ $darkTeal: #00bba8
     max-width: 100%
     padding: 0 !important
 
-.home-section-2
+.home-section-2, .home-section-1
   margin-top: -4px
   +screen(870px, 1180px)
     margin-top: -3px
